--- a/Module 3. Experiment tracking/docker-compose.yml
+++ b/Module 3. Experiment tracking/docker-compose.yml
@@ -25,7 +25,9 @@ services:
       - app_network
 
   jupyter:
-    image: jupyter/scipy-notebook:python-3.11
+    build:
+      context: .
+      dockerfile: jupyter/dockerfile
     container_name: jupyter_server
     restart: always
     ports:
